added EditorConfig & improve tsconfig

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES5",
     "module": "system",
+    "outDir": "../dist/app/",
     "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
