--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES5",
     "module": "commonjs",
+    "outDir": "../dist/",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
